objects/redwing__Auto_Assign_Rule_Processing_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Auto_Assign_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto-Assign Rule</label>
        <referenceTo>redwing__Auto_Assign_Rule__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Errors__c</fullName>
        <label>Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auto-Assign Rule Processing Item</label>
    <nameField>
        <displayFormat>AARPI-{00000000}</displayFormat>
        <label>Auto-Assign Rule Processing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto-Assign Rule Processing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>